WORKING MMAP=0 WOOOOOO

--- a/.env
+++ b/.env
@@ -36,14 +36,14 @@ OLLAMA_BATCH_SIZE=256                    # 256 for 1.5B, 128 for 24B
 OLLAMA_KEEP_ALIVE=-1                     # Permanent loading
 OLLAMA_MAX_LOADED_MODELS=1               # Only one model
 OLLAMA_LOAD_TIMEOUT=15m                  # 15m for 1.5B, 30m for 24B
-OLLAMA_NOPRUNE=1                      # Never unload
-OLLAMA_MLOCK=1                        # Lock in RAM/VRAM
-OLLAMA_MMAP=0                        # Disable memory mapping
-OLLAMA_NUMA=0                        # Disable NUMA
+OLLAMA_NOPRUNE=1                         # Never unload
+OLLAMA_MLOCK=1                           # Lock in RAM/VRAM
+OLLAMA_MMAP=0                            # Disable memory mapping
+OLLAMA_NUMA=0                            # Disable NUMA
 OLLAMA_MAIN_GPU=0                        # Primary GPU
 
 # =============================================================================
-# MODELFILE PARAMETERS (All configurable)
+# MODELFILE PARAMETERS (All configurable) - THESE WERE MISSING!
 # =============================================================================
 MODEL_TEMPERATURE=0.7
 MODEL_TOP_P=0.9
@@ -52,8 +52,8 @@ MODEL_REPEAT_PENALTY=1.1
 MODEL_MIROSTAT=0
 MODEL_MIROSTAT_ETA=0.1
 MODEL_MIROSTAT_TAU=5.0
-MODEL_USE_MMAP=0
-MODEL_USE_MLOCK=1
+MODEL_USE_MMAP=0                         # THIS IS THE KEY - DISABLES MMAP IN MODELFILE
+MODEL_USE_MLOCK=1                        # THIS IS THE KEY - ENABLES MLOCK IN MODELFILE
 MODEL_STOP_SEQUENCES=["<|endoftext|>", "<|im_end|>", "[DONE]", "<|end|>"]
 
 # =============================================================================
@@ -88,33 +88,3 @@ APP_WORKERS=1
 SESSION_LIFETIME_DAYS=7
 SSE_HEARTBEAT_INTERVAL=30
 SSE_RETRY_TIMEOUT=5000
-
-# =============================================================================
-# QUICK SWITCH PRESETS (Copy these when switching models)
-# =============================================================================
-
-# DEEPSEEK R1 1.5B PRESET:
- OLLAMA_MODEL=deepseek-r1:1.5b
- MODEL_DISPLAY_NAME=DeepSeek R1 1.5B
- MODEL_DESCRIPTION=DeepSeek R1 Distilled - Fast reasoning with step-by-step thinking
- OLLAMA_GPU_LAYERS=12
- OLLAMA_CONTEXT_SIZE=16384
- OLLAMA_BATCH_SIZE=128
- OLLAMA_LOAD_TIMEOUT=15m
- MODEL_MAX_TOKENS=1024
- MODEL_TIMEOUT=120
- CHAT_HISTORY_LIMIT=25
- SSE_MAX_CONNECTIONS=25
-
-# DEVSTRAL 24B PRESET:
-# OLLAMA_MODEL=devstral:24b
-# MODEL_DISPLAY_NAME=Devstral 24B
-# MODEL_DESCRIPTION=Devstral - Advanced coding and reasoning model
-# OLLAMA_GPU_LAYERS=12
-# OLLAMA_CONTEXT_SIZE=1024
-# OLLAMA_BATCH_SIZE=128
-# OLLAMA_LOAD_TIMEOUT=30m
-# MODEL_MAX_TOKENS=256
-# MODEL_TIMEOUT=180
-# CHAT_HISTORY_LIMIT=15
-# SSE_MAX_CONNECTIONS=25
