010101011 truthy is backkk

--- a/.env
+++ b/.env
@@ -43,7 +43,7 @@ OLLAMA_NUMA=0                            # Disable NUMA
 OLLAMA_MAIN_GPU=0                        # Primary GPU
 
 # =============================================================================
-# MODELFILE PARAMETERS (All configurable) - THESE WERE MISSING!
+# MODELFILE PARAMETERS (All configurable) - FIXED WITH BOOLEAN VALUES
 # =============================================================================
 MODEL_TEMPERATURE=0.7
 MODEL_TOP_P=0.9
@@ -52,8 +52,9 @@ MODEL_REPEAT_PENALTY=1.1
 MODEL_MIROSTAT=0
 MODEL_MIROSTAT_ETA=0.1
 MODEL_MIROSTAT_TAU=5.0
-MODEL_USE_MMAP=0                         # THIS IS THE KEY - DISABLES MMAP IN MODELFILE
-MODEL_USE_MLOCK=1                        # THIS IS THE KEY - ENABLES MLOCK IN MODELFILE
+# CRITICAL: Use boolean values for Ollama parameters
+MODEL_USE_MMAP=false                     # BOOLEAN: false to disable mmap
+MODEL_USE_MLOCK=true                     # BOOLEAN: true to enable mlock
 MODEL_STOP_SEQUENCES=["<|endoftext|>", "<|im_end|>", "[DONE]", "<|end|>"]
 
 # =============================================================================
