--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,3 @@
-# nginx/nginx.conf - IPv4 only with fixed rate limiting
-
 user nginx;
 worker_processes auto;
 pid /var/run/nginx.pid;
@@ -32,10 +30,10 @@ http {
     server_tokens off;
     client_max_body_size 50M;
 
-    # UNLIMITED timeouts for AI responses
-    proxy_connect_timeout 600s;            # 10 minutes to connect
-    proxy_send_timeout 0;                  # UNLIMITED send timeout
-    proxy_read_timeout 0;                  # UNLIMITED read timeout
+    # FIXED: Reasonable timeouts but still long for AI responses
+    proxy_connect_timeout 60s;            # 1 minute to connect
+    proxy_send_timeout 600s;              # 10 minutes send timeout
+    proxy_read_timeout 600s;              # 10 minutes read timeout
     
     # GZIP Configuration
     gzip on;
@@ -56,7 +54,7 @@ http {
     add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
     add_header Content-Security-Policy "default-src 'self'; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; img-src 'self' data:; font-src 'self' https://cdn.jsdelivr.net; script-src 'none'" always;
 
-    # Trust Cloudflare IPs for real IP detection (IPv4 only)
+    # Trust Cloudflare IPs for real IP detection (IPv4 only) - RESTORED
     set_real_ip_from 103.21.244.0/22;
     set_real_ip_from 103.22.200.0/22;
     set_real_ip_from 103.31.4.0/22;
@@ -74,13 +72,13 @@ http {
     set_real_ip_from 198.41.128.0/17;
     real_ip_header CF-Connecting-IP;
     
-    # FIXED: Rate limiting zones with proper sizes
+    # FIXED: Rate limiting zones with proper sizes - RESTORED
     limit_req_zone $binary_remote_addr zone=login_limit:10m rate=500r/m;
     limit_req_zone $binary_remote_addr zone=chat_limit:10m rate=6000r/m;
     limit_req_zone $binary_remote_addr zone=general_limit:10m rate=1000r/m;
     limit_req_status 429;
 
-    # IPv4-only IP Whitelisting 
+    # IPv4-only IP Whitelisting - RESTORED
     geo $allowed_ip {
         default 0;                      # Deny all by default
         127.0.0.1/32 1;               # Allow localhost
@@ -108,7 +106,13 @@ http {
         198.41.128.0/17 1;
     }
 
-    # Default server block - IPv4 only
+    # Upstream definition for better load balancing
+    upstream quart_backend {
+        server quart-app:8000 max_fails=3 fail_timeout=30s;
+        keepalive 32;
+    }
+
+    # Default server block - IPv4 only - RESTORED
     server {
         listen 80 default_server;
         server_name _;
@@ -129,12 +133,12 @@ http {
         }
     }
 
-    # Main server block - IPv4 only for authorized domains
+    # Main server block - IPv4 only for authorized domains - RESTORED
     server {
         listen 80;
         server_name localhost ai.junder.uk;  # ONLY these domains allowed
         
-        # IP Access Control - Return 403 for blocked IPs
+        # IP Access Control - Return 403 for blocked IPs - RESTORED
         if ($allowed_ip = 0) {
             return 403;
         }
@@ -142,99 +146,122 @@ http {
         # Root directory for static files
         root /usr/share/nginx/html;
 
-        # Static files
+        # Static files - RESTORED
         location /static/ {
             alias /usr/share/nginx/html/static/;
             expires 30d;
             add_header Cache-Control "public, max-age=2592000";
         }
         
-        # Chat endpoint - UNLIMITED streaming
-        location /chat {
-            limit_req zone=chat_limit burst=1000 nodelay;
-            
-            proxy_pass http://quart-app:8000/chat;
+        # Health check endpoint (no rate limiting) - FIXED timeout
+        location /health {
+            access_log off;
+            proxy_pass http://quart_backend/health;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            # Accept Cloudflare headers for HTTPS termination
+            proxy_set_header X-Forwarded-Ssl on;
+            proxy_set_header X-Forwarded-Port 443;
             
-            # CRITICAL: Chunked response settings
+            # Short timeouts for health checks
+            proxy_connect_timeout 10s;
+            proxy_send_timeout 15s;
+            proxy_read_timeout 15s;
+        }
+        
+        # Chat endpoint - STREAMING with long timeouts - RESTORED
+        location /chat {
+            limit_req zone=chat_limit burst=1000 nodelay;
+            
+            proxy_pass http://quart_backend/chat;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            # Accept Cloudflare headers for HTTPS termination
+            proxy_set_header X-Forwarded-Ssl on;
+            proxy_set_header X-Forwarded-Port 443;
+            
+            # CRITICAL: Chunked response settings - RESTORED
             proxy_buffering off;
             proxy_cache off;
             proxy_request_buffering off;
             
-            # Headers for chunked response
+            # Headers for chunked response - RESTORED
             proxy_set_header Connection "";
             proxy_http_version 1.1;
             
-            # UNLIMITED timeouts for streaming
-            proxy_connect_timeout 600s;
-            proxy_send_timeout 0;            # UNLIMITED
-            proxy_read_timeout 0;            # UNLIMITED
+            # LONG timeouts for streaming - RESTORED but reasonable
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 600s;          # 10 minutes
+            proxy_read_timeout 600s;          # 10 minutes
         }
         
-        # Authentication endpoints
+        # Authentication endpoints - RESTORED
         location ~ ^/(login|register|logout)$ {
             limit_req zone=login_limit burst=100 nodelay;
             
-            proxy_pass http://quart-app:8000;
+            proxy_pass http://quart_backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            # Accept Cloudflare headers for HTTPS termination
+            proxy_set_header X-Forwarded-Ssl on;
+            proxy_set_header X-Forwarded-Port 443;
+            
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
         }
         
-        # Admin endpoints
+        # Admin endpoints - RESTORED
         location /admin {
             limit_req zone=general_limit burst=200 nodelay;
             
-            proxy_pass http://quart-app:8000/admin;
+            proxy_pass http://quart_backend/admin;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            # Accept Cloudflare headers for HTTPS termination
+            proxy_set_header X-Forwarded-Ssl on;
+            proxy_set_header X-Forwarded-Port 443;
             
-            # UNLIMITED timeouts for admin operations
-            proxy_connect_timeout 120s;
-            proxy_send_timeout 0;
-            proxy_read_timeout 0;
+            # LONG timeouts for admin operations - RESTORED but reasonable
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 300s;
+            proxy_read_timeout 300s;
         }
         
-        # All other requests
+        # All other requests - RESTORED
         location / {
             limit_req zone=general_limit burst=500 nodelay;
             
-            proxy_pass http://quart-app:8000;
+            proxy_pass http://quart_backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            # Accept Cloudflare headers for HTTPS termination
+            proxy_set_header X-Forwarded-Ssl on;
+            proxy_set_header X-Forwarded-Port 443;
             
-            # UNLIMITED timeouts
-            proxy_connect_timeout 120s;
-            proxy_send_timeout 0;
-            proxy_read_timeout 0;
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 120s;
+            proxy_read_timeout 120s;
         }
         
-        # Health check endpoint (no rate limiting)
-        location /health {
-            access_log off;
-            proxy_pass http://quart-app:8000/health;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-        
-        # Block access to sensitive paths
+        # Block access to sensitive paths - RESTORED
         location ~ /\. {
             deny all;
             access_log off;
             log_not_found off;
         }
         
-        # Error pages for this domain
+        # Error pages for this domain - RESTORED + ADDED 50x
         error_page 403 /unauthorized.html;
         location = /unauthorized.html {
             root /usr/share/nginx/html;
@@ -243,6 +270,12 @@ http {
         
         error_page 429 /rate_limited.html;
         location = /rate_limited.html {
+            root /usr/share/nginx/html;
+            internal;
+        }
+        
+        error_page 502 503 504 /50x.html;
+        location = /50x.html {
             root /usr/share/nginx/html;
             internal;
         }
