BABY JAI FLASH MESSAGES DEEPSEEK:1.5B

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
     ports:
       - "11434:11434"
     environment:
-      # Existing Ollama environment variables
       - OLLAMA_HOST=${OLLAMA_HOST}
+      - OLLAMA_MODELS=/home/ollama/.ollama/models
       - OLLAMA_MLOCK=${OLLAMA_MLOCK}
       - OLLAMA_MMAP=${OLLAMA_MMAP}
       - OLLAMA_KEEP_ALIVE=${OLLAMA_KEEP_ALIVE}
@@ -21,7 +21,6 @@ services:
       - OLLAMA_CONTEXT_SIZE=${OLLAMA_CONTEXT_SIZE}
       - OLLAMA_BATCH_SIZE=${OLLAMA_BATCH_SIZE}
       - OLLAMA_MODEL=${OLLAMA_MODEL}
-      - OLLAMA_MODELS=${OLLAMA_MODELS}
       - MODEL_DISPLAY_NAME=${MODEL_DISPLAY_NAME}
       - MODEL_DESCRIPTION=${MODEL_DESCRIPTION}
       - MODEL_TEMPERATURE=${MODEL_TEMPERATURE}
@@ -97,6 +96,8 @@ services:
       - ADMIN_PASSWORD=${ADMIN_PASSWORD}
       - MODEL_TEMPERATURE=${MODEL_TEMPERATURE}
       - MODEL_TOP_P=${MODEL_TOP_P}
+      - MODEL_TOP_K=${MODEL_TOP_K}
+      - MODEL_REPEAT_PENALTY=${MODEL_REPEAT_PENALTY}
       - MODEL_MAX_TOKENS=${MODEL_MAX_TOKENS}
       - MODEL_TIMEOUT=${MODEL_TIMEOUT}
       - CHAT_CACHE_TTL_SECONDS=${CHAT_CACHE_TTL_SECONDS}
@@ -106,6 +107,14 @@ services:
       - SSE_HEARTBEAT_INTERVAL=${SSE_HEARTBEAT_INTERVAL}
       - SSE_MAX_CONNECTIONS=${SSE_MAX_CONNECTIONS}
       - SSE_RETRY_TIMEOUT=${SSE_RETRY_TIMEOUT}
+      - RATE_LIMIT_MESSAGES_PER_MINUTE=${RATE_LIMIT_MESSAGES_PER_MINUTE}
+      - OLLAMA_GPU_LAYERS=${OLLAMA_GPU_LAYERS}
+      - OLLAMA_NUM_THREAD=${OLLAMA_NUM_THREAD}
+      - OLLAMA_CONTEXT_SIZE=${OLLAMA_CONTEXT_SIZE}
+      - OLLAMA_BATCH_SIZE=${OLLAMA_BATCH_SIZE}
+      - MODEL_USE_MMAP=${MODEL_USE_MMAP}
+      - MODEL_USE_MLOCK=${MODEL_USE_MLOCK}
+      - OLLAMA_KEEP_ALIVE=${OLLAMA_KEEP_ALIVE}
     volumes:
       - ./volumes/app_data:/app/data
       - ./volumes/app_logs:/app/logs
