--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -52,8 +52,8 @@ http {
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
     add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
-    add_header Content-Security-Policy "default-src 'self'; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; img-src 'self' data:; font-src 'self' https://cdn.jsdelivr.net; script-src 'none'" always;
-
+    add_header Content-Security-Policy "default-src 'self'; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; img-src 'self' data:; font-src 'self' https://cdn.jsdelivr.net; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; connect-src 'self'" always;
+    
     # Trust Cloudflare IPs for real IP detection (IPv4 only) - RESTORED
     set_real_ip_from 103.21.244.0/22;
     set_real_ip_from 103.22.200.0/22;
