--- a/redis/redis.conf
+++ b/redis/redis.conf
@@ -1,4 +1,4 @@
-# Redis configuration file - Fixed permissions
+# Redis configuration file - Real-time chat optimized
 # Save this as redis/redis.conf
 
 # Network
@@ -12,36 +12,35 @@ tcp-keepalive 300
 # General
 daemonize no
 supervised no
-# Remove PID file to avoid permission issues
-# pidfile /var/run/redis_6379.pid
 loglevel notice
 logfile ""
 databases 16
 always-show-logo no
 
-# Persistence - RDB snapshots
-save 900 1
-# After 900 sec (15 min) if at least 1 key changed
-save 300 10
-# After 300 sec (5 min) if at least 10 keys changed
-save 60 10000
-# After 60 sec if at least 10000 keys changed
-save 30 1
-# After 30 sec if at least 1 key changed (more frequent saves)
-save 5 1
-# After 5 sec if at least 1 key changed (very frequent for chat app)
+# REAL-TIME PERSISTENCE - Disable RDB snapshots for immediate saves
+# Comment out all save directives to disable periodic snapshots
+# save 900 1
+# save 300 10
+# save 60 10000
 
-# Persistence - AOF (Append Only File)
+# For chat apps, we rely on AOF for real-time persistence
+
+# AOF (Append Only File) - REAL-TIME PERSISTENCE
 appendonly yes
 appendfilename "appendonly.aof"
-# Use everysec for good balance of performance and durability
+
+# CRITICAL: Use 'everysec' not 'always' for good balance of performance and durability
+# This ensures messages are written to disk within 1 second maximum
 appendfsync everysec
+
+# AOF settings for real-time
 no-appendfsync-on-rewrite no
 auto-aof-rewrite-percentage 100
 auto-aof-rewrite-min-size 64mb
 aof-load-truncated yes
 aof-use-rdb-preamble yes
 
+# RDB settings (kept minimal since we rely on AOF)
 stop-writes-on-bgsave-error yes
 rdbcompression yes
 rdbchecksum yes
@@ -53,7 +52,7 @@ maxmemory 2gb
 maxmemory-policy allkeys-lru
 maxmemory-samples 5
 
-# Lazy freeing
+# Lazy freeing - Keep disabled for consistency
 lazyfree-lazy-eviction no
 lazyfree-lazy-expire no
 lazyfree-lazy-server-del no
@@ -68,11 +67,17 @@ client-output-buffer-limit normal 0 0 0
 client-output-buffer-limit replica 256mb 64mb 60
 client-output-buffer-limit pubsub 32mb 8mb 60
 
-# Frequency
-hz 10
+# Frequency - Higher for better responsiveness
+hz 20
 
 # AOF rewrite
 aof-rewrite-incremental-fsync yes
 
-# Active defragmentation
+# Active defragmentation - Disabled for consistency
 activedefrag no
+
+# PERFORMANCE TUNING FOR CHAT APPS
+# Disable some features that can cause delays
+rdb-save-incremental-fsync yes
+
+# Note: fsync is handled by appendfsync setting above
