--- a/quart-app/requirements.txt
+++ b/quart-app/requirements.txt
@@ -8,6 +8,7 @@ werkzeug==3.0.1
 bcrypt==4.1.2
 jinja2==3.1.2
 ollama==0.3.3
-mistune==3.0.2
+markdown==3.5.1
 pygments==2.17.2
-html5lib==1.1
+pymdown-extensions==10.7.1
+markupsafe==2.1.3
