--- a/.env
+++ b/.env
@@ -68,6 +68,14 @@ RATE_LIMIT_MESSAGES_PER_MINUTE=10
 SSE_MAX_CONNECTIONS=25                   # 25
 
 # =============================================================================
+# CHAT AND USER MANAGEMENT SETTINGS
+# =============================================================================
+RATE_LIMIT_WINDOW=60                     # Rate limit window in seconds
+MAX_CHATS_PER_USER=1                     # Maximum chats per user
+MAX_PENDING_USERS=2                      # Maximum pending user registrations
+USER_ID_COUNTER_START=1000               # Starting ID for regular users
+
+# =============================================================================
 # NVIDIA GPU SETTINGS
 # =============================================================================
 NVIDIA_VISIBLE_DEVICES=0
@@ -82,6 +90,7 @@ SECRET_KEY=your-very-secret-key-change-this-in-production
 SECURE_COOKIES=0
 ADMIN_USERNAME=admin
 ADMIN_PASSWORD=admin
+ADMIN_USER_ID=admin                      # Fixed admin user ID
 REDIS_URL=redis://redis:6379/0
 APP_HOST=0.0.0.0
 APP_PORT=8000
@@ -89,3 +98,22 @@ APP_WORKERS=1
 SESSION_LIFETIME_DAYS=7
 SSE_HEARTBEAT_INTERVAL=30
 SSE_RETRY_TIMEOUT=5000
+
+# =============================================================================
+# VALIDATION AND SECURITY SETTINGS
+# =============================================================================
+MIN_USERNAME_LENGTH=3                    # Minimum username length
+MAX_USERNAME_LENGTH=50                   # Maximum username length
+MIN_PASSWORD_LENGTH=6                    # Minimum password length
+MAX_PASSWORD_LENGTH=128                  # Maximum password length
+MAX_MESSAGE_LENGTH=10000                 # Maximum message length
+MAX_FILENAME_LENGTH=255                  # Maximum filename length
+CSRF_TOKEN_LENGTH=32                     # CSRF token length (hex chars)
+
+# =============================================================================
+# REDIS CONFIGURATION
+# =============================================================================
+REDIS_MAX_CONNECTIONS=50                 # Redis connection pool size
+REDIS_SOCKET_KEEPALIVE=true             # Keep Redis connections alive
+REDIS_RETRY_ON_TIMEOUT=true             # Retry on timeout
+REDIS_DECODE_RESPONSES=true             # Decode Redis responses
