--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,6 +64,11 @@ services:
       - ./redis/redis.conf:/usr/local/etc/redis/redis.conf:ro
     ports:
       - "6379:6379"
+    environment:
+      - REDIS_MAX_CONNECTIONS=${REDIS_MAX_CONNECTIONS}
+      - REDIS_SOCKET_KEEPALIVE=${REDIS_SOCKET_KEEPALIVE}
+      - REDIS_RETRY_ON_TIMEOUT=${REDIS_RETRY_ON_TIMEOUT}
+      - REDIS_DECODE_RESPONSES=${REDIS_DECODE_RESPONSES}
     networks:
       - devstral-network
     deploy:
@@ -94,6 +99,7 @@ services:
       - SECRET_KEY=${SECRET_KEY}
       - ADMIN_USERNAME=${ADMIN_USERNAME}
       - ADMIN_PASSWORD=${ADMIN_PASSWORD}
+      - ADMIN_USER_ID=${ADMIN_USER_ID}
       - MODEL_TEMPERATURE=${MODEL_TEMPERATURE}
       - MODEL_TOP_P=${MODEL_TOP_P}
       - MODEL_TOP_K=${MODEL_TOP_K}
@@ -108,6 +114,10 @@ services:
       - SSE_MAX_CONNECTIONS=${SSE_MAX_CONNECTIONS}
       - SSE_RETRY_TIMEOUT=${SSE_RETRY_TIMEOUT}
       - RATE_LIMIT_MESSAGES_PER_MINUTE=${RATE_LIMIT_MESSAGES_PER_MINUTE}
+      - RATE_LIMIT_WINDOW=${RATE_LIMIT_WINDOW}
+      - MAX_CHATS_PER_USER=${MAX_CHATS_PER_USER}
+      - MAX_PENDING_USERS=${MAX_PENDING_USERS}
+      - USER_ID_COUNTER_START=${USER_ID_COUNTER_START}
       - OLLAMA_GPU_LAYERS=${OLLAMA_GPU_LAYERS}
       - OLLAMA_NUM_THREAD=${OLLAMA_NUM_THREAD}
       - OLLAMA_CONTEXT_SIZE=${OLLAMA_CONTEXT_SIZE}
@@ -119,6 +129,17 @@ services:
       - MODEL_MIROSTAT_ETA=${MODEL_MIROSTAT_ETA}
       - MODEL_MIROSTAT_TAU=${MODEL_MIROSTAT_TAU}
       - MODEL_STOP_SEQUENCES=${MODEL_STOP_SEQUENCES}
+      - MIN_USERNAME_LENGTH=${MIN_USERNAME_LENGTH}
+      - MAX_USERNAME_LENGTH=${MAX_USERNAME_LENGTH}
+      - MIN_PASSWORD_LENGTH=${MIN_PASSWORD_LENGTH}
+      - MAX_PASSWORD_LENGTH=${MAX_PASSWORD_LENGTH}
+      - MAX_MESSAGE_LENGTH=${MAX_MESSAGE_LENGTH}
+      - MAX_FILENAME_LENGTH=${MAX_FILENAME_LENGTH}
+      - CSRF_TOKEN_LENGTH=${CSRF_TOKEN_LENGTH}
+      - REDIS_MAX_CONNECTIONS=${REDIS_MAX_CONNECTIONS}
+      - REDIS_SOCKET_KEEPALIVE=${REDIS_SOCKET_KEEPALIVE}
+      - REDIS_RETRY_ON_TIMEOUT=${REDIS_RETRY_ON_TIMEOUT}
+      - REDIS_DECODE_RESPONSES=${REDIS_DECODE_RESPONSES}
     volumes:
       - ./volumes/app_data:/app/data
       - ./volumes/app_logs:/app/logs
