--- a/.env
+++ b/.env
@@ -15,27 +15,27 @@ NGINX_CPU=1
 # CURRENT MODEL CONFIGURATION (Change these for different models)
 # =============================================================================
 # For DeepSeek R1 1.5B:
-OLLAMA_MODEL=deepseek-r1:1.5b
-MODEL_DISPLAY_NAME=DeepSeek R1 1.5B
-MODEL_DESCRIPTION=DeepSeek R1 Distilled - Fast reasoning with step-by-step thinking
+#OLLAMA_MODEL=deepseek-r1:1.5b
+#MODEL_DISPLAY_NAME=DeepSeek R1 1.5B
+#MODEL_DESCRIPTION=DeepSeek R1 Distilled - Fast reasoning with step-by-step thinking
 
 # For Devstral 24B (uncomment and comment above):
-# OLLAMA_MODEL=devstral:24b
-# MODEL_DISPLAY_NAME=Devstral 24B
-# MODEL_DESCRIPTION=Devstral - Advanced coding and reasoning model
+OLLAMA_MODEL=devstral:24b
+MODEL_DISPLAY_NAME=Devstral 24B
+MODEL_DESCRIPTION=Devstral - Advanced coding and reasoning model
 
 # =============================================================================
 # OLLAMA PERFORMANCE PARAMETERS (All configurable)
 # =============================================================================
 OLLAMA_HOST=0.0.0.0
 OLLAMA_URL=http://ollama:11434
-OLLAMA_GPU_LAYERS=29                     # 29 for 1.5B, 41 for 24B
+OLLAMA_GPU_LAYERS=41                     # 29 for 1.5B, 41 for 24B
 OLLAMA_NUM_THREAD=4                      # CPU threads
 OLLAMA_CONTEXT_SIZE=8192                # 16384 for 1.5B, 8192 for 24B
 OLLAMA_BATCH_SIZE=128                    # 256 for 1.5B, 128 for 24B
 OLLAMA_KEEP_ALIVE=-1                     # Permanent loading
 OLLAMA_MAX_LOADED_MODELS=1               # Only one model
-OLLAMA_LOAD_TIMEOUT=15m                  # 15m for 1.5B, 30m for 24B
+OLLAMA_LOAD_TIMEOUT=30m                  # 15m for 1.5B, 30m for 24B
 OLLAMA_NOPRUNE=1                         # Never unload
 OLLAMA_MLOCK=1                           # Lock in RAM/VRAM
 OLLAMA_MMAP=0                            # Disable memory mapping
@@ -62,7 +62,7 @@ MODEL_STOP_SEQUENCES=["<|endoftext|>", "<|im_end|>", "[DONE]", "<|end|>"]
 # =============================================================================
 MODEL_MAX_TOKENS=1024                    # 2048 for 1.5B, 1024 for 24B
 MODEL_TIMEOUT=300                        # 120 for 1.5B, 180 for 24B
-CHAT_HISTORY_LIMIT=25                    # 25 for 1.5B, 15 for 24B
+CHAT_HISTORY_LIMIT=15                    # 25 for 1.5B, 15 for 24B
 CHAT_CACHE_TTL_SECONDS=7200
 RATE_LIMIT_MESSAGES_PER_MINUTE=10
 SSE_MAX_CONNECTIONS=25                   # 25
