### ADD MY ROUTERS PUBLIC IP ###

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -81,6 +81,7 @@ http {
     # IPv4-only IP Whitelisting - RESTORED
     geo $allowed_ip {
         default 0;                      # Deny all by default
+        ### ADD MY ROUTERS PUBLIC IP ###
         127.0.0.1/32 1;               # Allow localhost
         192.168.0.0/16 1;             # Allow private network 192.168.x.x
         10.0.0.0/8 1;                 # Allow private network 10.x.x.x
