tweak for 3060ti ~8Gb vRAM

--- a/.env
+++ b/.env
@@ -27,12 +27,12 @@ MODEL_DESCRIPTION=Devstral - Advanced coding and reasoning model
 # =============================================================================
 # OLLAMA PERFORMANCE PARAMETERS (All configurable)
 # =============================================================================
-OLLAMA_HOST=0.0.0.0
-OLLAMA_URL=http://ollama:11434
-OLLAMA_GPU_LAYERS=41                     # 29 for 1.5B, 41 for 24B
-OLLAMA_NUM_THREAD=4                      # CPU threads
-OLLAMA_CONTEXT_SIZE=8192                # 16384 for 1.5B, 8192 for 24B
-OLLAMA_BATCH_SIZE=128                    # 256 for 1.5B, 128 for 24B
+OLLAMA_HOST=0.0.0.0                                                      #|   VRAM DEPENDENT              |#
+OLLAMA_URL=http://ollama:11434                                           #|                               |#
+OLLAMA_GPU_LAYERS=24                     # 24                            #|29 for 1.5B, 41 for 24B        |#
+OLLAMA_NUM_THREAD=4                      # CPU threads                   #|                               |#
+OLLAMA_CONTEXT_SIZE=2048                 # 2048                          #|16384 for 1.5B, 8192 for 24B   |#
+OLLAMA_BATCH_SIZE=32                     # 32                            #|256 for 1.5B, 128 for 24B      |#
 OLLAMA_KEEP_ALIVE=-1                     # Permanent loading
 OLLAMA_MAX_LOADED_MODELS=1               # Only one model
 OLLAMA_LOAD_TIMEOUT=30m                  # 15m for 1.5B, 30m for 24B
