--- a/.env
+++ b/.env
@@ -6,9 +6,9 @@ QUART_APP_MEMORY=1G
 QUART_APP_CPU=1
 OLLAMA_MEMORY=16G
 OLLAMA_CPU=4
-REDIS_MEMORY=2G
-REDIS_CPU=2
-NGINX_MEMORY=512M
+REDIS_MEMORY=1G
+REDIS_CPU=1
+NGINX_MEMORY=1G
 NGINX_CPU=1
 
 # =============================================================================
@@ -32,7 +32,7 @@ OLLAMA_URL=http://ollama:11434                                           #|     
 OLLAMA_GPU_LAYERS=12                     # 18                            #|29 for 1.5B, 41 for 24B        |#
 OLLAMA_NUM_THREAD=8                      # CPU threads                   #|                               |#
 OLLAMA_CONTEXT_SIZE=2048                 # 2048                          #|16384 for 1.5B, 8192 for 24B   |#
-OLLAMA_BATCH_SIZE=64                     # 32                            #|256 for 1.5B, 128 for 24B      |#
+OLLAMA_BATCH_SIZE=128                     # 32                            #|256 for 1.5B, 128 for 24B      |#
 OLLAMA_KEEP_ALIVE=-1                     # Permanent loading
 OLLAMA_MAX_LOADED_MODELS=1               # Only one model
 OLLAMA_LOAD_TIMEOUT=30m                  # 15m for 1.5B, 30m for 24B
